# MolAct

./: .gitignore  GITHUB_SETUP.md  README.md  SETUP.md  SUMMARY.txt  agentfly_install.sh  pyproject.toml  requirements.txt
ChemCoTBench/baseline_and_eval/: eval_moledit_cli.py  evaluator.py
ChemCoTBench_benchmark/: README.md
ChemCoTBench_benchmark/chemcotbench/mol_edit/: add.json  (+2 more)
agentfly/: __init__.py  requirements.txt
agentfly/agents/: __init__.py  agent_base.py  auto.py
agentfly/configs/: vllm.yaml
agentfly/dockers/: run_container.sh
agentfly/envs/: __init__.py  env_base.py
agentfly/rewards/: __init__.py  mol_edit_reward.py  mol_opt_reward.py  reward_base.py
agentfly/templates/: __init__.py  constants.py  global_policy.py  preprocess.py  system_policy.py  templates.py  tool_policy.py  utils.py  vision_processor.py
agentfly/tools/: __init__.py  tool_base.py
agentfly/utils/: __init__.py  deploy.py  logging.py  monitor.py  timing.py  trajectories.py  ui_action_parser.py  verl.py
oracle/: README.md
outputs/chemcotbench_moledit_results_moledit_7b_maxturn_16/: eval_add.json
outputs/chemcotbench_molopt_results_7b_maxturn_16/: .eval_logp_830.py  eval_logp.json
outputs/mol_edit_eval_bench_7b_maxturn_16/: pred_add.json
outputs/mol_opt_eval_bench_7b_maxturn_16/: pred_logp.json
scripts/: 1 run_mol_edit_inference.sh  2 eval_mol_edit_chemcotbench.sh  3 run_mol_opt_inference.sh  4 eval_mol_opt_chemcotbench.sh  eval_mol_edit_bench.sh  infer_mol_edit_bench.py  run_mol_edit_agent.py  run_mol_edit_eval.sh  run_mol_edit_eval_bench.sh  run_mol_opt_agent.py
(+106 files in other folders)
