[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "gpu: marks tests as requiring GPU resources"
]

[tool.setuptools]
packages = ["agentfly"]

[project]
name = "AgentFly"
version = "0.0.1"
description = "Agent reinforcement learning framework."
readme = "README.md"
requires-python = ">=3.10,<3.13" # Release the version limit for Python 3.12
license = { text = "Apache-2.0" }

dependencies = [
    "multiprocess",
    "requests",
    "PyYAML",
    "timeout-decorator",
    "redis",
    "docker",
    "openai",
    "faiss-cpu",
    "vllm==0.10.0",
    "termcolor",
    "tenacity",
    "bs4",
    "qwen_vl_utils",
    "onnxruntime",
    "mpmath",
    "wandb"
]

[project.optional-dependencies]
verl = [
    "accelerate",
    "codetiming",
    "datasets",
    "dill",
    "flash-attn",
    "hydra-core",
    "liger-kernel",
    "numpy",
    "pandas",
    "peft",
    "pyarrow>=15.0.0",
    "pybind11",
    "pylatexenc",
    "pre-commit",
    "ray[default]",
    "tensordict<=0.6.2",
    "torchdata",
    "transformers",
    "packaging>=20.0",
    "uvicorn",
    "fastapi"
]
dev = [
    "pytest",
    "nest-asyncio",
    "pytest-asyncio",
]